# esh

./: .gitignore  CMakeLists.txt  README.md  esh
inc/: builtin.h  esh.h  exec.h  parse.h  prompt.h  shell.h  sig.h
src/: env.cpp  free.c  free.cpp  init.c  init.cpp  loop.c  loop.cpp  main.c  main.cpp  shell.cpp  sig.cpp
src/esh/: esh_cpy_arr.c  esh_free_str.c  esh_free_str_arr.c  esh_print_str.c  esh_println_str.c  string.cpp
src/exec/: exec.c  exec.cpp
src/exec/builtin/: builtin.cpp  cd.cpp  echo.c  env.cpp  exit.cpp  history.cpp  kill.cpp
src/parse/: parse.cpp  parse_utils.cpp
src/prompt/: prompt_display.c  prompt_input.c  prompt_input.cpp
